<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:background="@color/gray_light2"
    tools:context=".Register">

    <TextView
        android:id="@+id/tx_crear_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create\nAccount"
        android:textSize="48sp"
        android:textColor="@color/green_light"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tx_name"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tx_email"
        android:paddingEnd="5dp"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="5dp"
            android:hint="@string/nombre" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_ape"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="@id/tx_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="10dp"
        app:layout_constraintBottom_toTopOf="@id/tx_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_apellidos"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:hint="@string/apellidos"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tx_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:background="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:background="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass2"
            android:background="@color/white"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tx_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_password2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txI_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/green_light"
        android:onClick="sign_up"
        android:text="Sign up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_username" />

    <TextView
        android:id="@+id/tx_register_now2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="sign_in"
        android:text="I have a account"
        android:textColor="@color/green_light"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="30dp"
        android:layout_height="46dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tx_username" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="12dp"
        android:text="@string/ter"

        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@id/checkBox" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="12dp"
        android:onClick="ShowPopup"
        android:text="@string/ter2"


        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="@id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>